@@ -1,0 +1,8 @@
+---
+auto_fieldset: 1
+auto_label: '%n'
+elements: 
+  - name: foo
+  
+  - name: bar
+    auto_container_label_class: '%t_label'
