@@ -17,8 +17,8 @@ my $expected_form_xhtml = <<EOF;
 <label>foo</label>
 <input name="foo" type="text" />
 </div>
-<div class="text_label">
-<label>bar</label>
+<div>
+<label class="text_label">bar</label>
 <input name="bar" type="text" />
 </div>
 </fieldset>
